# CollisionDetection

./: CMakeLists.txt  README.md  collide.cu  collide.h  collide_bf.c  run.sh  tinyobj_loader_c.h
testcase/: cube_sphere.csv  diamond_sphere.csv
